--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,8 @@
   height: 80px;
 }
 
+.App p { padding-left: 5px; padding-right: 5px }
+
 span .ital { font-style: italic; font-family: serif}
 
 .App-header {
