--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
   height: 80px;
 }
 
-.App p { padding-left: 5px; padding-right: 5px }
+.App p { max-width: 90% }
 
 span .ital { font-style: italic; font-family: serif}
 
