--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@
 p { max-width: 90% }
 
 span .ital { font-style: italic; font-family: serif}
-.App span .orangeish { color: orange}
+.App span .orangish { color: orange}
 
 .App-header {
   background-color: #222;
