--- a/src/App.css
+++ b/src/App.css
@@ -3,12 +3,14 @@
   
 }
 
-.App h2 { color: #FF8719 }
+.App h2 { color: #FF8719; border-top: 1px orange solid; border-bottom: 1px orange solid }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
 }
+
+a { text-decoration: none }
 
 body span.ital { font-style: italic; font-family: serif !important; font-size: 110% }
 .App span.orangish { color: orange}
