--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,8 @@ a { text-decoration: none }
 body span.ital { font-style: italic; font-family: serif !important; font-size: 110% }
 .App span.orangish { color: orange}
 
+h1, p { max-width: 90% }
+
 .App-header {
   background-color: #222;
   height: 150px;
