--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body { margin: 0 auto }
   height: 80px;
 }
 
-a { text-decoration: none }
+a { text-decoration: none } a:hover { color: orange }
 
 body span.ital { font-style: italic; font-family: serif !important; font-size: 110% }
 .App span.orangish { color: orange}
