--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,7 @@
 .App {
   text-align: center; 
+  padding: 0 5% 0 5%;
 }
-
-body { margin: 0 auto }
 
 .App h2 { color: #FF8719; border-top: 1px #FFD7A8 solid; border-bottom: 1px #FFD7A8 solid; line-height: 200% }
 
@@ -16,7 +15,7 @@ a { text-decoration: none } a:hover { color: orange }
 body span.ital { font-style: italic; font-family: serif !important; font-size: 110% }
 .App span.orangish { color: orange}
 
-h1, h2, header img, p { max-width: 90% }
+/* h1, h2, header img, p { max-width: 90% } */
 
 .App-header {
   background-color: #222;
