--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
   padding: 0 5% 0 5%;
 }
 
-.App h2 { color: #FF8719; border-top: 1px #FFD7A8 solid; border-bottom: 1px #FFD7A8 solid; line-height: 200%; margin-top: 200%; margin-bottom: 200% }
+.App h2 { color: #FF8719; border-top: 1px #FFD7A8 solid; border-bottom: 1px #FFD7A8 solid; line-height: 200%; margin-top: 1em; margin-bottom: 1em }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
