--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@ body span.ital { font-style: italic; font-family: serif !important; font-size: 1
   height: /*150px*/ 33%;
   padding: 20px;
   color: white;
+  margin-bottom: 1em;
 }
 
 .App-title {
