--- a/src/App.css
+++ b/src/App.css
@@ -22,8 +22,8 @@ body span.ital { font-style: italic; font-family: serif !important; font-size: 1
   height: /*150px*/ 33%;
   padding: 20px;
   color: white;
-  margin-bottom: 1em;
 }
+header { margin-bottom: 1em; }
 
 .App-title {
   font-size: 1.5em;
