--- a/src/App.css
+++ b/src/App.css
@@ -18,7 +18,7 @@ body span.ital { font-style: italic; font-family: serif !important; font-size: 1
 /* h1, h2, header img, p { max-width: 90% } */
 
 .App-header {
-  background: #222 url("https://iu.box.com/shared/static/9n7nvfk7q4ivnrx6dfot5uoi1m5f3qjy.jpg") no-repeat bottom;
+  background: #222 url("https://iu.box.com/shared/static/9n7nvfk7q4ivnrx6dfot5uoi1m5f3qjy.jpg") no-repeat center;
   height: /*150px*/ 33%;
   padding: 20px;
   color: white;
