--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,9 @@
 .App {
   text-align: center; 
-  padding: 0 5% 0 5%;
+  
 }
+
+.mainstreet { padding: 0 5% 0 5%; }
 
 .App h2 { color: #FF8719; border-top: 1px #FFD7A8 solid; border-bottom: 1px #FFD7A8 solid; line-height: 200%; margin-top: 1em; margin-bottom: 1em }
 
