--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
   height: 80px;
 }
 
-a { text-decoration: none } a:hover { color: orange }
+a { text-decoration: none } a:hover { color: #53C2CC }
 
 body span.ital { font-style: italic; font-family: serif !important; font-size: 110% }
 .App span.orangish { color: orange}
