--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,8 @@ body span.ital { font-style: italic; font-family: serif !important; font-size: 1
 /* h1, h2, header img, p { max-width: 90% } */
 
 .App-header {
-  background: #222 url("https://iu.box.com/shared/static/9n7nvfk7q4ivnrx6dfot5uoi1m5f3qjy.jpg") no-repeat center;
+  /*background: #222 url("https://iu.box.com/shared/static/9n7nvfk7q4ivnrx6dfot5uoi1m5f3qjy.jpg") no-repeat center; */
+  background: #222 url("https://iu.box.com/s/yafch40tupawixyqahrdl4d327f6qzek") no-repeat top;
   height: /*150px*/ 33%;
   padding: 20px;
   color: white;
