--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,7 @@ body span.ital { font-style: italic; font-family: serif !important; font-size: 1
   font-size: 1.5em;
 }
 
-img .pluralsight { width: 25%; height: 25% }
+.pluralsight { width: 25%; height: 25% }
 
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
