--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 
 .mainstreet { padding: 0 10% 0 10%; }
 
-.App h2 { color: #FF8719; border-top: 1px #FFD7A8 solid; border-bottom: 1px #FFD7A8 solid; line-height: 200%; margin-top: 1em; margin-bottom: 1em }
+.App h2 { color: #FF8719; border-top: 1px rgb(250, 221, 189) solid; border-bottom: 1px rgb(250, 221, 189) solid; line-height: 200%; margin-top: 1em; margin-bottom: 1em }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
