--- a/src/App.css
+++ b/src/App.css
@@ -20,14 +20,12 @@
      -1px 1px 0 rgb(219, 124, 36),
       1px 1px 0 rgb(219, 124, 36)
  }
-/*
+
  h2 .obnox {
-  -webkit-text-stroke: none;
-  text-shadow:
-     none
+  font-style: italic; font-family: serif !important;
 
  }
- */
+ 
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
