--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@
  }
 
  h2 .obnox {
-  font-style: italic; font-family: serif !important;
+  font-style: italic; font-family: serif !important; letter-spacing: -1px
 
  }
  
