--- a/src/App.css
+++ b/src/App.css
@@ -22,8 +22,8 @@
  }
 
  h2 .obnox {
-  font-style: italic; font-family: serif !important; letter-spacing: -2px
-
+  font-style: italic; font-family: serif !important; letter-spacing: -2px;
+  text-shadow: none; -webkit-text-stroke: none
  }
  
 
