--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@
  }
 
  h2 .obnox {
-  font-style: italic; font-family: serif !important; letter-spacing: -2px;
+  font-style: italic; font-family: serif !important; margin-left: -3px;
   text-shadow: none; -webkit-text-stroke: none
  }
  
