--- a/src/App.css
+++ b/src/App.css
@@ -50,7 +50,8 @@ body span.ital { font-style: italic; font-family: serif !important; font-size: 1
 .App-header {
   /*background: #222 url("https://iu.box.com/shared/static/9n7nvfk7q4ivnrx6dfot5uoi1m5f3qjy.jpg") no-repeat center; */
   background: #222 url("https://drive.google.com/file/d/1jsLgPqVSlzgQzrqA4nluSYhrcAjLqqXV") no-repeat center;
-  height: /*150px*/ 33%;
+  height: 150px;
+  /* 33% */
   padding: 20px;
   color: white;
   margin-bottom: 2em;
