--- a/src/App.css
+++ b/src/App.css
@@ -34,7 +34,7 @@
  h2.mccsc { color: #00467f }
  h2.iu { color: #990000 }
  
-
+p { max-width: 33% }
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
@@ -50,8 +50,8 @@ body span.ital { font-style: italic; font-family: serif !important; font-size: 1
 .App-header {
   /*background: #222 url("https://iu.box.com/shared/static/9n7nvfk7q4ivnrx6dfot5uoi1m5f3qjy.jpg") no-repeat center; */
   background: #222 url("https://drive.google.com/file/d/1jsLgPqVSlzgQzrqA4nluSYhrcAjLqqXV") no-repeat center;
-  height: 150px;
-  /* 33% */
+ max-height: 33%; 
+
   padding: 20px;
   color: white;
   margin-bottom: 2em;
