--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center; 
+  width: 33%;
   
 }
 
@@ -9,7 +10,6 @@
   /* border-top: 1px #FF8719 solid; */ 
   border-top: 1px rgb(250, 221, 189) solid; 
   border-bottom: 1px rgb(250, 221, 189) solid; 
-  max-width: 33%;
  /* background-color: rgb(253, 238, 222); */
   line-height: 200%; 
   margin-top: 1em; 
