--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 .App {
   text-align: center; 
-  width: 33%;
   
 }
 
-.mainstreet { padding: 0 10% 0 10%; }
+.mainstreet { padding: 0 10% 0 10%; 
+max-width: 50% }
 
 .App h2 { color: #FF8719; 
   /* border-top: 1px #FF8719 solid; */ 
