--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 margin: auto 0; 
 }
 
-.mainstreet { padding: 0 10% 0 10%;  }
+.mainstreet { padding: 0 10% 0 10%; max-width: 50%  }
 
 .App h2 { color: #FF8719; 
   /* border-top: 1px #FF8719 solid; */ 
@@ -37,7 +37,7 @@ margin: auto 0;
  h2.mccsc { color: #00467f }
  h2.iu { color: #990000 }
  
-p { max-width: 50%% } 
+/* p { max-width: 50%% } */
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
