--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 margin: auto 0; 
 }
 
-.mainstreet { padding: 0 10% 0 10%; max-width: 50%  }
+.mainstreet { padding: 0 10% 0 10%; max-width: 50%; margin: 0 auto  }
 
 .App h2 { color: #FF8719; 
   /* border-top: 1px #FF8719 solid; */ 
