--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@ margin: auto 0;
  h2.mccsc { color: #00467f }
  h2.iu { color: #990000 }
  
-/* p { max-width: 50%% } */
+ p { text-align: left } 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
