--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,7 @@ margin: auto 0;
   margin-top: 1em; 
   margin-bottom: 1em;
   letter-spacing: -1px;
+  text-align: left;
   /*
   -webkit-text-stroke: 1px rgb(219, 124, 36),; 
    text-shadow:
