--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@ margin: auto 0;
  h2.mccsc { color: #00467f }
  h2.iu { color: #990000 }
  
- p { text-align: left } 
+ p { text-align: left; line-height: 1.5em } 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
