--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,7 @@ body span.ital { font-style: italic; font-family: serif !important; font-size: 1
 
 .App-header {
   /*background: #222 url("https://iu.box.com/shared/static/9n7nvfk7q4ivnrx6dfot5uoi1m5f3qjy.jpg") no-repeat center; */
-  background: purple url("header.jpg") no-repeat center;
+  background: purple url("header.jpg") no-repeat top;
  max-height: 33%; 
 
   padding: 20px;
