--- a/src/App.css
+++ b/src/App.css
@@ -54,7 +54,7 @@ body span.ital { font-style: italic; font-family: serif !important; font-size: 1
 .App-header {
   /*background: #222 url("https://iu.box.com/shared/static/9n7nvfk7q4ivnrx6dfot5uoi1m5f3qjy.jpg") no-repeat center; */
   background: purple url("header.jpg") no-repeat top;
- max-height: 33%; 
+ max-height: 40%; 
 
   padding: 20px;
   color: white;
@@ -70,4 +70,16 @@ body span.ital { font-style: italic; font-family: serif !important; font-size: 1
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+/* Smartphones (portrait) ----------- */
+@media only screen 
+and (max-width : 320px) {
+  /* Styles */
+.App-header {
+  max-height: 33% 
+}
+.mainstreet { 
+  max-width: 70% 
+}
 }
