--- a/src/App.css
+++ b/src/App.css
@@ -85,6 +85,7 @@ body span.ital { font-style: italic; font-family: serif !important; font-size: 1
   .mainstreet { 
     max-width: 70% !important;
   }
-  p { text-align: center }
+
+  p, .App h2 { text-align: center }
   
 }
