--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,12 @@
   text-align: center; 
   
 }
+body { background-color: black 
+}
 #root {
 margin: auto 0; 
+background-color: azure;
+padding-bottom: 50px
 }
 
 .mainstreet { padding: 0 10% 0 10%; max-width: 50%; margin: 0 auto  }
