--- a/src/App.css
+++ b/src/App.css
@@ -66,6 +66,8 @@ body span.ital { font-style: italic; font-family: serif !important; font-size: 1
   margin-bottom: 2em;
 }
 
+p img { float: right; margin-left: 40px }
+
 .App-title {
   font-size: 1.5em;
 }
