--- a/src/App.css
+++ b/src/App.css
@@ -50,6 +50,7 @@ padding-bottom: 40px
 }
 ul, li { list-style-type: none; padding-left: 0 !important ; margin-left: 0 !important }
 a { text-decoration: none; color: #53C2CC  } a:hover { color: orange }
+p a { text-decoration: none; color: orang  } a:hover { color: red }
 
 body span.ital { font-style: italic; font-family: serif !important; font-size: 110% }
 .App span.orangish { color: orange}
