--- a/src/App.css
+++ b/src/App.css
@@ -96,7 +96,7 @@ p img { float: right; margin-left: 40px; width: 33%; height: 33% }
 
   p, .App h2 { text-align: left }
   
-  p image { vertical-align: top; float: none }
+  p img { float: left; margin: 0; width: 100%; height: 100% }
 
   .App h2 {
 
