--- a/src/App.css
+++ b/src/App.css
@@ -77,6 +77,8 @@ p img { float: right; margin-left: 40px; width: 33%; height: 33%;   border: 5px 
   font-size: 1.5em;
 }
 
+.introzen { font-style: italic; font-weight: medium}
+
 .pluralsight { max-width: 33%; max-height: 33% }
 
 @keyframes App-logo-spin {
