--- a/src/App.css
+++ b/src/App.css
@@ -77,7 +77,7 @@ p img { float: right; margin-left: 40px; width: 33%; height: 33%;   border: 5px 
   font-size: 1.5em;
 }
 
-.introzen { font-style: italic; font-weight: medium}
+.introzen { font-style: italic; font-weight: medium; font-size: 1.5em}
 
 .pluralsight { max-width: 33%; max-height: 33% }
 
